--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "express": "^4.17.1",
     "pg": "^8.6.0",
     "sequelize": "^6.6.2"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.2.0"
   }
 }
