route,static,mvp selesai

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "dependencies": {
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
+    "node-fetch": "^2.6.1",
     "pg": "^8.6.0",
     "sequelize": "^6.6.2",
     "socket.io": "^4.1.2"
